Improves detection for Samsung Galaxy Tab S4 10.5"

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12447,7 +12447,7 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-(?:T830[X]?|T837R4)(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Tab S4 10.5" WiFi'
-    - regex: '(?:SAMSUNG-)?SM-(?:T835[CN]?|T837[VTA])(?:[);/ ]|$)'
+    - regex: '(?:SAMSUNG-)?SM-(?:T835[CN]?|T837[VTA]?)(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Tab S4 10.5"'
     - regex: '(?:SAMSUNG-)?SM-(?:T725[N]?|T720X|T727[AV])(?:[);/ ]|$)'
