fix: remove ZonePlayer prefix

--- a/Tests/fixtures/portable_media_player.yml
+++ b/Tests/fixtures/portable_media_player.yml
@@ -226,7 +226,7 @@
   device:
     type: portable media player
     brand: SONOS
-    model: ZonePlayer ZPS1
+    model: ZPS1
   os_family: GNU/Linux
   browser_family: Unknown
 -
@@ -242,7 +242,7 @@
   device:
     type: portable media player
     brand: SONOS
-    model: ZonePlayer ZPS9
+    model: ZPS9
   os_family: GNU/Linux
   browser_family: Unknown
 -
@@ -258,7 +258,7 @@
   device:
     type: portable media player
     brand: SONOS
-    model: ZonePlayer ZP90
+    model: ZP90
   os_family: GNU/Linux
   browser_family: Unknown
 -
@@ -274,7 +274,7 @@
   device:
     type: portable media player
     brand: SONOS
-    model: ZonePlayer ZPS17
+    model: ZPS17
   os_family: GNU/Linux
   browser_family: Unknown
 -
@@ -290,7 +290,7 @@
   device:
     type: portable media player
     brand: SONOS
-    model: ZonePlayer ZPS5
+    model: ZPS5
   os_family: GNU/Linux
   browser_family: Unknown
 -
@@ -306,7 +306,7 @@
   device:
     type: portable media player
     brand: SONOS
-    model: ZonePlayer ZPS6
+    model: ZPS6
   os_family: GNU/Linux
   browser_family: Unknown
 -
@@ -322,7 +322,7 @@
   device:
     type: portable media player
     brand: SONOS
-    model: ZonePlayer ZPS23
+    model: ZPS23
   os_family: GNU/Linux
   browser_family: Unknown
 -
@@ -338,7 +338,7 @@
   device:
     type: portable media player
     brand: SONOS
-    model: ZonePlayer ZPS11
+    model: ZPS11
   os_family: GNU/Linux
   browser_family: Unknown
 -
@@ -354,7 +354,7 @@
   device:
     type: portable media player
     brand: SONOS
-    model: ZonePlayer ZPS18
+    model: ZPS18
   os_family: GNU/Linux
   browser_family: Unknown
 -
@@ -370,7 +370,7 @@
   device:
     type: portable media player
     brand: SONOS
-    model: ZonePlayer ZPS20
+    model: ZPS20
   os_family: GNU/Linux
   browser_family: Unknown
 -
@@ -386,7 +386,7 @@
   device:
     type: portable media player
     brand: SONOS
-    model: ZonePlayer ZPS14
+    model: ZPS14
   os_family: GNU/Linux
   browser_family: Unknown
 -
@@ -402,7 +402,7 @@
   device:
     type: portable media player
     brand: SONOS
-    model: ZonePlayer ZPS6
+    model: ZPS6
   os_family: GNU/Linux
   browser_family: Unknown
 -
@@ -418,7 +418,7 @@
   device:
     type: portable media player
     brand: SONOS
-    model: ZonePlayer ZPS12
+    model: ZPS12
   os_family: GNU/Linux
   browser_family: Unknown
 -
@@ -434,7 +434,7 @@
   device:
     type: portable media player
     brand: SONOS
-    model: ZonePlayer ZPS3
+    model: ZPS3
   os_family: GNU/Linux
   browser_family: Unknown
 -
@@ -450,7 +450,7 @@
   device:
     type: portable media player
     brand: SONOS
-    model: ZonePlayer ZPS15
+    model: ZPS15
   os_family: GNU/Linux
   browser_family: Unknown
 -
@@ -466,7 +466,7 @@
   device:
     type: portable media player
     brand: SONOS
-    model: ZonePlayer ZPS13
+    model: ZPS13
   os_family: GNU/Linux
   browser_family: Unknown
 -
