--- a/regexes/device/portable_media_player.yml
+++ b/regexes/device/portable_media_player.yml
@@ -69,7 +69,7 @@ SONOS:
   device: 'portable media player'
   models:
     - regex: '\((ZPS(?:[13569]|1[1-578]|2[03])|ZP90)\)'
-      model: 'ZonePlayer $1'
+      model: '$1'
     - regex: 'Sonos;Play5;'
       model: 'Play:5'
     - regex: 'Sonos;One;'
