Improves detection for Samsung Galaxy Core Max

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12866,7 +12866,7 @@ Samsung:
       model: 'Galaxy Core LTE'
     - regex: '(?:SAMSUNG-)?SM-G3568V'
       model: 'Galaxy Core Mini 4G'
-    - regex: '(?:SAMSUNG-)?SM-G5108Q'
+    - regex: '(?:SAMSUNG-)?SM-G5108Q?'
       model: 'Galaxy Core Max'
     - regex: '(?:SAMSUNG-)?SM-G3815'
       model: 'Galaxy EXPRESS II'
