--- a/Tests/fixtures/smartphone-2.yml
+++ b/Tests/fixtures/smartphone-2.yml
@@ -12222,3 +12222,21 @@
     model: Galaxy J4
   os_family: Android
   browser_family: Chrome
+- 
+  user_agent: Dalvik/1.6.0 (Linux; U; Android 5.0.1; SM-G5108 Build/KTU84P)
+  os:
+    name: Android
+    version: 5.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Samsung
+    model: Galaxy Core Max
+  os_family: Android
+  browser_family: Android Browser
