Improves detection for Samsung Galaxy Ace 4 Neo

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12702,7 +12702,7 @@ Samsung:
       model: 'Galaxy Ace 4 Duos'
     - regex: '(?:SAMSUNG-)?SM-G313[HU]'
       model: 'Galaxy Ace 4 Lite'
-    - regex: '(?:SAMSUNG-)?SM-G318(?:H|ML)(?:[);/ ]|$)'
+    - regex: '(?:SAMSUNG-)?SM-(?:G316U|G318(?:H|ML))(?:[);/ ]|$)'
       model: 'Galaxy Ace 4 Neo'
     - regex: '(?:SAMSUNG-)?SM-G9100(?:[);/ ]|$)'
       model: 'Galaxy S II'
