Adds detection for Samsung Galaxy Tab Active Pro 10.1"

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12654,6 +12654,9 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-T570(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Tab Active 3 8.0" WiFi'
+    - regex: '(?:SAMSUNG-)?SM-(?:T545|T547U?)(?:[);/ ]|$)'
+      device: 'tablet'
+      model: 'Galaxy Tab Active Pro 10.1"'
     - regex: '(?:SAMSUNG-)?SM-(?:P902|P907A)(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Note Pro 12.2"'
