--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12657,6 +12657,9 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-(?:T545|T547U?)(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Tab Active Pro 10.1"'
+    - regex: '(?:SAMSUNG-)?SM-T540(?:[);/ ]|$)'
+      device: 'tablet'
+      model: 'Galaxy Tab Active Pro 10.1" WiFi'
     - regex: '(?:SAMSUNG-)?SM-(?:P902|P907A)(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Note Pro 12.2"'
