--- a/Tests/fixtures/tablet-1.yml
+++ b/Tests/fixtures/tablet-1.yml
@@ -9797,3 +9797,39 @@
     model: Galaxy Tab Active Pro 10.1" WiFi
   os_family: Android
   browser_family: Android Browser
+- 
+  user_agent: Dalvik/1.6.0 (Linux; U; Android 4.4.4; SM-T365M Build/KTU84P)
+  os:
+    name: Android
+    version: 4.4.4
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Samsung
+    model: Galaxy Tab Active 8.0"
+  os_family: Android
+  browser_family: Android Browser
+- 
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 5.1.1; SM-T365F0 Build/LMY47X)
+  os:
+    name: Android
+    version: 5.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Samsung
+    model: Galaxy Tab Active 8.0"
+  os_family: Android
+  browser_family: Android Browser
