Improves detection for Samsung Galaxy Tab A7 10.4" (2020) LTE

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12435,7 +12435,7 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-T307U(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Tab A 8.4" (2020) LTE'
-    - regex: '(?:SAMSUNG-)?SM-T505(?:[);/ ]|$)'
+    - regex: '(?:SAMSUNG-)?SM-(?:T505[CN]?|T507)(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Tab A7 10.4" (2020) LTE'
     - regex: '(?:SAMSUNG-)?SM-T500(?:[);/ ]|$)'
