Improves detection for Samsung Galaxy Tab S5e 10.5"

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12450,7 +12450,7 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-(?:T835[CN]?|T837[VTA]?)(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Tab S4 10.5"'
-    - regex: '(?:SAMSUNG-)?SM-(?:T725[N]?|T720X|T727[AV])(?:[);/ ]|$)'
+    - regex: '(?:SAMSUNG-)?SM-(?:T725[CN]?|T720X|T727(?:R4|[AUV])?)(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Tab S5e 10.5"'
     - regex: '(?:SAMSUNG-)?SM-T720(?:[);/ ]|$)'
