Improves detection for Samsung Galaxy Tab S6 10.5" LTE

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12459,7 +12459,7 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-T865N?(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Tab S6 10.5"'
-    - regex: '(?:SAMSUNG-)?SM-T867[V]?(?:[);/ ]|$)'
+    - regex: '(?:SAMSUNG-)?SM-T867(?:R4|[VU])?(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Tab S6 10.5" LTE'
     - regex: '(?:SAMSUNG-)?SM-(?:P615[CN]?|P617)(?:[);/ ]|$)'
