--- a/Tests/fixtures/tablet-1.yml
+++ b/Tests/fixtures/tablet-1.yml
@@ -9977,3 +9977,35 @@
     model: Galaxy Tab S5e 10.5"
   os_family: Android
   browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Linux; Android 10; SM-T867R4 Build/QP1A.190711.020; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/78.0.3904.96 Safari/537.36 GSA/11.5.9.21.arm64
+  os:
+    name: Android
+    version: "10"
+    platform: ARM
+  client:
+    type: mobile app
+    name: Google Search App
+    version: 11.5.9.21
+  device:
+    type: tablet
+    brand: Samsung
+    model: Galaxy Tab S6 10.5" LTE
+  os_family: Android
+  browser_family: Unknown
+- 
+  user_agent: Mozilla/5.0 (Linux; Android 10; SM-T867U Build/QP1A.190711.020; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/78.0.3904.96 Safari/537.36 GSA/11.5.9.21.arm64
+  os:
+    name: Android
+    version: "10"
+    platform: ARM
+  client:
+    type: mobile app
+    name: Google Search App
+    version: 11.5.9.21
+  device:
+    type: tablet
+    brand: Samsung
+    model: Galaxy Tab S6 10.5" LTE
+  os_family: Android
+  browser_family: Unknown
