Rename Galaxy Tab S6 10.4" Lite WiFi to Galaxy Tab S6 Lite 10.4" WiFi

--- a/Tests/fixtures/tablet-1.yml
+++ b/Tests/fixtures/tablet-1.yml
@@ -9650,7 +9650,7 @@
   device:
     type: tablet
     brand: Samsung
-    model: Galaxy Tab S6 10.4" Lite WiFi
+    model: Galaxy Tab S6 Lite 10.4" WiFi
   os_family: Android
   browser_family: Chrome
 - 
