--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12467,7 +12467,7 @@ Samsung:
       model: 'Galaxy Tab S6 10.4" Lite'
     - regex: '(?:SAMSUNG-)?SM-P610X?(?:[);/ ]|$)'
       device: 'tablet'
-      model: 'Galaxy Tab S6 10.4" Lite WiFi'
+      model: 'Galaxy Tab S6 Lite 10.4" WiFi'
     - regex: '(?:SAMSUNG-)?SM-T860(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Tab S6 10.5" WiFi'
