Rename Galaxy Tab S6 10.4" Lite to Galaxy Tab S6 Lite 10.4"

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12464,7 +12464,7 @@ Samsung:
       model: 'Galaxy Tab S6 10.5" LTE'
     - regex: '(?:SAMSUNG-)?SM-(?:P615[CN]?|P617)(?:[);/ ]|$)'
       device: 'tablet'
-      model: 'Galaxy Tab S6 10.4" Lite'
+      model: 'Galaxy Tab S6 Lite 10.4"'
     - regex: '(?:SAMSUNG-)?SM-P610X?(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Tab S6 Lite 10.4" WiFi'
