Rename Galaxy Tab 3 7.0" Lite WiFi to Galaxy Tab 3 Lite 7.0" WiFi

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12443,7 +12443,7 @@ Samsung:
       model: 'Galaxy Tab A7 10.4" (2020) WiFi'
     - regex: '(?:SAMSUNG-)?SM-T11[03]'
       device: 'tablet'
-      model: 'Galaxy Tab 3 7.0" Lite WiFi'
+      model: 'Galaxy Tab 3 Lite 7.0" WiFi'
     - regex: '(?:SAMSUNG-)?SM-(?:T830[X]?|T837R4)(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Tab S4 10.5" WiFi'
