--- a/Tests/fixtures/tablet-4.yml
+++ b/Tests/fixtures/tablet-4.yml
@@ -1844,7 +1844,7 @@
   device:
     type: tablet
     brand: Samsung
-    model: Galaxy Tab 3 7.0" Lite
+    model: Galaxy Tab 3 Lite 7.0"
   os_family: Android
   browser_family: Android Browser
 - 
@@ -1862,7 +1862,7 @@
   device:
     type: tablet
     brand: Samsung
-    model: Galaxy Tab 3 7.0" Lite
+    model: Galaxy Tab 3 Lite 7.0"
   os_family: Android
   browser_family: Unknown
 - 
