--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12476,7 +12476,7 @@ Samsung:
       model: 'Galaxy Tab S6 10.5" 5G'
     - regex: '(?:SAMSUNG-)?SM-T111[M]?(?:[);/ ]|$)'
       device: 'tablet'
-      model: 'Galaxy Tab 3 7.0" Lite'
+      model: 'Galaxy Tab 3 Lite 7.0"'
     - regex: '(?:SAMSUNG-)?SM-T116(?:BU|NU|NY)?'
       device: 'tablet'
       model: 'Galaxy Tab 3 V'
