--- a/Tests/fixtures/tablet-4.yml
+++ b/Tests/fixtures/tablet-4.yml
@@ -4126,7 +4126,7 @@
   device:
     type: tablet
     brand: Samsung
-    model: Galaxy Tab S6 10.4" Lite
+    model: Galaxy Tab S6 Lite 10.4"
   os_family: Android
   browser_family: Chrome
 - 
@@ -4144,7 +4144,7 @@
   device:
     type: tablet
     brand: Samsung
-    model: Galaxy Tab S6 10.4" Lite WiFi
+    model: Galaxy Tab S6 Lite 10.4" WiFi
   os_family: Android
   browser_family: Chrome
 - 
