--- a/Tests/fixtures/tablet-1.yml
+++ b/Tests/fixtures/tablet-1.yml
@@ -10045,3 +10045,21 @@
     model: Galaxy Tab 4 7.0" WiFi + 3G
   os_family: Android
   browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; SAMSUNG SM-P588C) AppleWebKit/537.36 (KHTML, like Gecko) SamsungBrowser/10.1 Chrome/71.0.3578.99 Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Samsung Browser
+    version: "10.1"
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: tablet
+    brand: Samsung
+    model: Galaxy Tab A 10.1" with S Pen (2016) LTE
+  os_family: Android
+  browser_family: Chrome
