Adds detection for Samsung Galaxy Tab A 10.1" with S Pen (2016) WiFi

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12426,6 +12426,9 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-(?:P587|P588C)(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Tab A 10.1" with S Pen (2016) LTE'
+    - regex: '(?:SAMSUNG-)?SM-P583(?:[);/ ]|$)'
+      device: 'tablet'
+      model: 'Galaxy Tab A 10.1" with S Pen (2016) WiFi'
     - regex: '(?:SAMSUNG-)?SM-P205(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Tab A 8.0" with S Pen (2019) LTE'
