--- a/Tests/fixtures/tablet-1.yml
+++ b/Tests/fixtures/tablet-1.yml
@@ -10081,3 +10081,21 @@
     model: Galaxy Tab A 10.1" with S Pen (2016) WiFi
   os_family: Android
   browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Linux; Android 9; SAMSUNG SM-T837P) AppleWebKit/537.36 (KHTML, like Gecko) SamsungBrowser/11.1 Chrome/75.0.3770.143 Safari/537.36
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Samsung Browser
+    version: "11.1"
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: tablet
+    brand: Samsung
+    model: Galaxy Tab S4 10.5" with S Pen
+  os_family: Android
+  browser_family: Chrome
