Improves detection for Samsung Galaxy Tab S2 9.7" LTE

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12513,7 +12513,7 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-(?:T71[03]|T710X)(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Tab S2 8.0" WiFi'
-    - regex: '(?:SAMSUNG-)?SM-(?:T815|T817[ATW]?|T818[ATW]|T819[Y]?)'
+    - regex: '(?:SAMSUNG-)?SM-(?:T815|T817[ATW]?|T818[ATVW]?|T819[Y]?)'
       device: 'tablet'
       model: 'Galaxy Tab S2 9.7" LTE'
     - regex: '(?:SAMSUNG-)?SM-T820'
