Replace Webkit with WebKit

--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -34,7 +34,7 @@
   name: 'xStand'
   version: '$1'
   engine:
-    default: 'Webkit'
+    default: 'WebKit'
 
 # Biyubi (http://www.biyubi.com/)
 - regex: 'Biyubi/(\d+[\.\d]+)'
@@ -46,7 +46,7 @@
   name: 'Perfect Browser'
   version: '$1'
   engine:
-    default: 'Webkit'
+    default: 'WebKit'
 
 # Phantom Browser (https://www.lg.com/)
 - regex: 'Browser/Phantom/V(\d+[\.\d]+)'
@@ -63,7 +63,7 @@
   name: 'Zetakey'
   version: '$1'
   engine:
-    default: 'Webkit'
+    default: 'WebKit'
 
 # PlayFree Browser
 - regex: 'PlayFreeBrowser/(?:(\d+[\.\d]+))?'
@@ -1309,21 +1309,21 @@
   name: 'Tenta Browser'
   version: '$1'
   engine:
-    default: 'Webkit'
+    default: 'WebKit'
 
 # Firefox Rocket
 - regex: 'Rocket/(\d+[\.\d]+)'
   name: 'Firefox Rocket'
   version: '$1'
   engine:
-    default: 'Webkit'
+    default: 'WebKit'
 
 # Web Explorer
 - regex: 'Web Explorer/(\d+[\.\d]+).*Chrome'
   name: 'Web Explorer'
   version: '$1'
   engine:
-    default: 'Webkit'
+    default: 'WebKit'
 
 # Seznam Browser
 - regex: 'SznProhlizec/(\d+[\.\d]+)'
