--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -1629,7 +1629,7 @@
     type: browser
     name: Tenta Browser
     version: "2.10.3"
-    engine: Webkit
+    engine: WebKit
     engine_version: "537.36"
 - 
   user_agent: QwantMobile/2.5 (Android 8.1.0; Mobile; rv:63.0) Gecko/63.0 Firefox/63.0 QwantBrowser/63.0.1
@@ -1661,7 +1661,7 @@
     type: browser
     name: Firefox Rocket
     version: "1.6.2"
-    engine: Webkit
+    engine: WebKit
     engine_version: "537.36"
 - 
   user_agent: Mozilla/5.0 Linux; Android 8.0.0 AppleWebKit/537.36 KHTML, like Gecko Version/4.0 Web Explorer/2.6.6 Chrome/75.0.3770.143 Mobile Safari/537.36
@@ -1669,7 +1669,7 @@
     type: browser
     name: Web Explorer
     version: "2.6.6"
-    engine: Webkit
+    engine: WebKit
     engine_version: "537.36"
 - 
   user_agent: Mozilla/5.0 (Linux; Android 5.1; 5116J Build/LMY47I) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/67.0.3396.87 Mobile Safari/537.36
@@ -2885,7 +2885,7 @@
     type: browser
     name: Zetakey
     version: 3.3.1
-    engine: Webkit
+    engine: WebKit
     engine_version: 533.21.1
 -
   user_agent: Mozilla/5.0 (Windows; N; Windows NT 6.1; xx) AppleWebKit/533.3 (KHTML, like Gecko) AwoX Browser CE-HTML/1.0 ()/AwoX-Software:W37-2011 Safari/533.3
@@ -2917,7 +2917,7 @@
     type: browser
     name: Perfect Browser
     version: "9.1"
-    engine: Webkit
+    engine: WebKit
     engine_version: ""
 -
   user_agent: Perfect%20Browser-iPad/2.6 CFNetwork/485.13.8 Darwin/11.0.0
@@ -2925,7 +2925,7 @@
     type: browser
     name: Perfect Browser
     version: "2.6"
-    engine: Webkit
+    engine: WebKit
     engine_version: ""
 -
   user_agent: Mozilla/5.0 (iPad; CPU OS 12_1_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/12.0 Perfect/22.4 Mobile/15E148 Safari/604.1
@@ -2933,7 +2933,7 @@
     type: browser
     name: Perfect Browser
     version: "22.4"
-    engine: Webkit
+    engine: WebKit
     engine_version: 605.1.15
 -
   user_agent: Mozilla/5.0 (iPhone; CPU iPhone OS 12_0_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/12.0 Perfect/22.2.1 Mobile/15E148 Safari/604.1
@@ -2941,7 +2941,7 @@
     type: browser
     name: Perfect Browser
     version: 22.2.1
-    engine: Webkit
+    engine: WebKit
     engine_version: 605.1.15
 -
   user_agent: PerfectBrowserPro/25.5 CFNetwork/1197 Darwin/20.0.0
@@ -2949,7 +2949,7 @@
     type: browser
     name: Perfect Browser
     version: "25.5"
-    engine: Webkit
+    engine: WebKit
     engine_version: ""
 -
   user_agent: Biyubi/5.0 (Sistema Fenix; G11; Familia Toledo; es-mx)
@@ -2973,7 +2973,7 @@
     type: browser
     name: xStand
     version: 6.6.2
-    engine: Webkit
+    engine: WebKit
     engine_version: ""
 -
   user_agent: MxBrowser-iPhone/405 CFNetwork/894 Darwin/17.4.0
