--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         }
     ],
     "support": {
-        "forum": "http://forum.matomo.org/",
+        "forum": "https://forum.matomo.org/",
         "issues": "https://github.com/matomo-org/device-detector/issues",
         "wiki": "https://dev.matomo.org/",
         "source": "https://github.com/matomo-org/piwik"
