--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "forum": "https://forum.matomo.org/",
         "issues": "https://github.com/matomo-org/device-detector/issues",
         "wiki": "https://dev.matomo.org/",
-        "source": "https://github.com/matomo-org/piwik"
+        "source": "https://github.com/matomo-org/matomo"
     },
     "autoload": {
         "psr-4": { "DeviceDetector\\": "" },
