--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -515,6 +515,11 @@
     default: 'Blink'
 
 # Qwant Mobile
+- regex: 'QwantiOS/(\d+[\.\d]+)'
+  name: 'Qwant Mobile iOS'
+  version: '$1'
+  engine:
+    default: 'WebKit'
 - regex: 'QwantMobile(?:/(\d+[\.\d]+))?'
   name: 'Qwant Mobile'
   version: '$1'
