--- a/Tests/fixtures/smartphone-2.yml
+++ b/Tests/fixtures/smartphone-2.yml
@@ -201,14 +201,14 @@
   user_agent: QwantMobile/2.0 (iPhone; CPU iPhone OS 11_1_2 like Mac OS X) AppleWebKit/604.3.5 (KHTML, like Gecko) QwantiOS/2.0.0b1 Mobile/15B202 Safari/604.3.5
   os:
     name: iOS
-    version: "11.1.2"
+    version: 11.1.2
     platform: ""
   client:
     type: browser
-    name: Qwant Mobile
-    version: "2.0"
-    engine: Gecko
-    engine_version: ""
+    name: Qwant Mobile iOS
+    version: 2.0.0
+    engine: WebKit
+    engine_version: 604.3.5
   device:
     type: smartphone
     brand: Apple
