Improves detection for Super Fast Browser

--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -3055,3 +3055,11 @@
     version: 1.0.4.7
     engine: Blink
     engine_version: ""
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; CPH1937) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/73.0.3683.90 Mobile SFB/15.0.0024.18 Mobile Safari/537.36
+  client:
+    type: browser
+    name: Super Fast Browser
+    version: 15.0.0024.18
+    engine: WebKit
+    engine_version: "537.36"
