--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -3055,3 +3055,11 @@
     version: 1.0.4.7
     engine: Blink
     engine_version: ""
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.0; Micromax Q402 Build/NRD90M) AppleWebKit/537.36 (KHTML, like Gecko) VenusBrowser/2.0.0 Chrome/64.0.3282.137 Mobile Safari/537.36
+  client:
+    type: browser
+    name: Venus Browser
+    version: 2.0.0
+    engine: Blink
+    engine_version: ""
