--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -3055,3 +3055,11 @@
     version: 1.0.4.7
     engine: Blink
     engine_version: ""
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; SM-A217F Build/QP1A.190711.020) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/80.0.3987.99 Mobile Safari/537.36 GinxDroidBrowser/90.9.8.3
+  client:
+    type: browser
+    name: GinxDroid Browser
+    version: 90.9.8.3
+    engine: Blink
+    engine_version: ""
