--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,6 +5,13 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+# GinxDroid Browser (https://play.google.com/store/apps/details?id=ginxdroid.gdm)
+- regex: 'GinxDroidBrowser/(\d+[\.\d]+)'
+  name: 'GinxDroid Browser'
+  version: '$1'
+  engine:
+    default: 'Blink'
+
 # Cornowser (https://github.com/xdevs23/Cornowser)
 - regex: 'Cornowser/(\d+[\.\d]+)'
   name: 'Cornowser'
