--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -1089,10 +1089,7 @@
       4: '' # multiple (KHTML or WebKit)
 
 #Baidu Browser
-- regex: '(?:baidubrowser|bdbrowser_i18n|bdbrowser)(?:[/ ](\d+[\.\d]*))?'
-  name: 'Baidu Browser'
-  version: '$1'
-- regex: 'FlyFlow(?:[/ ](\d+[\.\d]*))?'
+- regex: '(?:baidubrowser|bdbrowser_i18n|bdbrowser|FlyFlow|BaiduHD)(?:[/ ](\d+[\.\d]*))?'
   name: 'Baidu Browser'
   version: '$1'
 
