Adds detection for DeskBrowse

--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -3055,3 +3055,11 @@
     version: 1.0.4.7
     engine: Blink
     engine_version: ""
+-
+  user_agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X) AppleWebKit/312.8 (KHTML, like Gecko, Safari) DeskBrowse/1.0
+  client:
+    type: browser
+    name: DeskBrowse
+    version: "1.0"
+    engine: WebKit
+    engine_version: "312.8"
