--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -3055,3 +3055,11 @@
     version: 1.0.4.7
     engine: Blink
     engine_version: ""
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Arvin/9.0.0 Chrome/78.0.3904.108 Mobile Safari/537.36
+  client:
+    type: browser
+    name: Arvin
+    version: 9.0.0
+    engine: Blink
+    engine_version: ""
