--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,6 +5,13 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+# Arvin (https://play.google.com/store/apps/details?id=com.browser.arvin.anti.blokir&hl=sv&gl=US)
+- regex: 'Arvin/(\d+[\.\d]+)'
+  name: 'Arvin'
+  version: '$1'
+  engine:
+    default: 'Blink'
+
 # Cornowser (https://github.com/xdevs23/Cornowser)
 - regex: 'Cornowser/(\d+[\.\d]+)'
   name: 'Cornowser'
