--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -3055,3 +3055,11 @@
     version: 1.0.4.7
     engine: Blink
     engine_version: ""
+-
+  user_agent: Mozilla/5.0 (Windows NT 6.3; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/73.0.3683.75 CGNBrowser/1.3.93.10 Safari/537.36
+  client:
+    type: browser
+    name: CGN Browser
+    version: 1.3.93.10
+    engine: Blink
+    engine_version: ""
