Adds detection for Avira Scout browser

--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -3055,3 +3055,11 @@
     version: 1.0.4.7
     engine: Blink
     engine_version: ""
+-
+  user_agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_7_5) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/47.0.2526.111 Safari/537.36 AviraScout/47.0.2526.111
+  client:
+    type: browser
+    name: Avira Scout
+    version: 47.0.2526.111
+    engine: Blink
+    engine_version: ""
