--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,6 +5,13 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+# Avira Scout (http://www.avira.com/en/avira-scout)
+- regex: 'AviraScout/(\d+[\.\d]+)'
+  name: 'Avira Scout'
+  version: '$1'
+  engine:
+    default: 'Blink'
+
 # Cornowser (https://github.com/xdevs23/Cornowser)
 - regex: 'Cornowser/(\d+[\.\d]+)'
   name: 'Cornowser'
