--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,6 +5,16 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+#Otter Browser
+- regex: 'Chrome.+Otter(?:[ /](\d+[\.\d]+))?'
+  name: 'Otter Browser'
+  version: '$1'
+  engine:
+    default: 'Blink'
+- regex: 'Otter(?:[ /](\d+[\.\d]+))?'
+  name: 'Otter Browser'
+  version: '$1'
+
 # Cornowser (https://github.com/xdevs23/Cornowser)
 - regex: 'Cornowser/(\d+[\.\d]+)'
   name: 'Cornowser'
@@ -1847,11 +1857,6 @@
 #Oregano (https://oregan.net/)
 - regex: '(?:Oregano|OreganMediaBrowser)(?:[ /](\d+[\.\d]+))?'
   name: 'Oregano'
-  version: '$1'
-
-#Otter Browser
-- regex: 'Otter(?:[ /](\d+[\.\d]+))?'
-  name: 'Otter Browser'
   version: '$1'
 
 #Polaris
