--- a/Tests/fixtures/smartphone-12.yml
+++ b/Tests/fixtures/smartphone-12.yml
@@ -1185,8 +1185,8 @@
     platform: ""
   client:
     type: browser
-    name: Chrome Webview
-    version: "74.0.3729.157"
+    name: Yandex Browser
+    version: "8.60"
     engine: Blink
     engine_version: ""
   device:
@@ -1194,7 +1194,7 @@
     brand: Samsung
     model: Galaxy A10
   os_family: Android
-  browser_family: Chrome
+  browser_family: Unknown
 - 
   user_agent: Mozilla/5.0 (Linux; Android 9; SM-A102U) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/75.0.3770.143 Mobile Safari/537.36
   os:
@@ -3793,8 +3793,8 @@
     platform: ""
   client:
     type: browser
-    name: Chrome Webview
-    version: "73.0.3683.103"
+    name: Yandex Browser
+    version: "8.30"
     engine: Blink
     engine_version: ""
   device:
@@ -3802,7 +3802,7 @@
     brand: Samsung
     model: Galaxy A8 (2018)
   os_family: Android
-  browser_family: Chrome
+  browser_family: Unknown
 - 
   user_agent: Mozilla/5.0 (Linux; Android 8.0.0; SM-G885F Build/R16NW) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/68.0.3440.91 Mobile Safari/537.36
   os:
