--- a/Tests/fixtures/tablet-1.yml
+++ b/Tests/fixtures/tablet-1.yml
@@ -1301,8 +1301,8 @@
     platform: ""
   client:
     type: browser
-    name: Chrome Webview
-    version: "75.0.3770.101"
+    name: Yandex Browser
+    version: "8.50"
     engine: Blink
     engine_version: ""
   device:
@@ -1310,7 +1310,7 @@
     brand: bq
     model: Armor Pro
   os_family: Android
-  browser_family: Chrome
+  browser_family: Unknown
 - 
   user_agent: Mozilla/5.0 Linux; Android 7.0; BQ-1077L Build/NRD90M; wv AppleWebKit/537.36 KHTML, like Gecko Version/4.0 Chrome/63.0.3239.111 Safari/537.36 YandexSearch/8.50/apad YandexSearchBrowser/8.50
   os:
@@ -1319,8 +1319,8 @@
     platform: ""
   client:
     type: browser
-    name: Chrome Webview
-    version: "63.0.3239.111"
+    name: Yandex Browser
+    version: "8.50"
     engine: Blink
     engine_version: ""
   device:
@@ -1328,7 +1328,7 @@
     brand: bq
     model: Armor Pro LTE
   os_family: Android
-  browser_family: Chrome
+  browser_family: Unknown
 - 
   user_agent: mozilla/5.0 (linux; android 9; bq-1022l) applewebkit/537.36 (khtml, like gecko) chrome/81.0.4044.117 safari/537.36
   os:
@@ -2201,8 +2201,8 @@
     platform: ""
   client:
     type: browser
-    name: Chrome Webview
-    version: "75.0.3770.101"
+    name: Yandex Browser
+    version: "8.50"
     engine: Blink
     engine_version: ""
   device:
@@ -2210,7 +2210,7 @@
     brand: bq
     model: Simple
   os_family: Android
-  browser_family: Chrome
+  browser_family: Unknown
 - 
   user_agent: Mozilla/5.0 Linux; Android 5.1; BQ-7006G Build/LMY47D; wv AppleWebKit/537.36 KHTML, like Gecko Version/4.0 Chrome/72.0.3626.76 Safari/537.36
   os:
@@ -7997,8 +7997,8 @@
     platform: ""
   client:
     type: browser
-    name: Chrome Webview
-    version: "39.0.0.0"
+    name: Yandex Browser
+    version: "7.80"
     engine: Blink
     engine_version: ""
   device:
@@ -8006,7 +8006,7 @@
     brand: Ginzzu
     model: GT-8010
   os_family: Android
-  browser_family: Chrome
+  browser_family: Unknown
 - 
   user_agent: Mozilla/5.0 (Linux; Android 7.0; Ginzzu GT-8110) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/78.0.3904.108 Safari/537.36
   os:
