--- a/Tests/fixtures/tablet-3.yml
+++ b/Tests/fixtures/tablet-3.yml
@@ -7141,8 +7141,8 @@
     platform: ""
   client:
     type: browser
-    name: Chrome Webview
-    version: "69.0.3497.100"
+    name: Yandex Browser
+    version: "7.90"
     engine: Blink
     engine_version: ""
   device:
@@ -7150,7 +7150,7 @@
     brand: Prestigio
     model: Grace 4G
   os_family: Android
-  browser_family: Chrome
+  browser_family: Unknown
 - 
   user_agent: Mozilla/5.0 (Linux; U; Android 5.1.1; PSP5551DUO Build/LMY48B; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/67.0.3396.87 Mobile Safari/537.36 OPR/44.1.2254.143214
   os:
