--- a/Tests/fixtures/tablet.yml
+++ b/Tests/fixtures/tablet.yml
@@ -4309,8 +4309,8 @@
     platform: ""
   client:
     type: browser
-    name: Chrome Webview
-    version: "53.0.2749.0"
+    name: Yandex Browser
+    version: "7.45"
     engine: Blink
     engine_version: ""
   device:
@@ -4318,7 +4318,7 @@
     brand: Arian Space
     model: "71"
   os_family: Android
-  browser_family: Chrome
+  browser_family: Unknown
 - 
   user_agent: Mozilla/5.0 Linux; Android 7.0; ARIAN Space 80 SS8003PG AppleWebKit/537.36 KHTML, like Gecko Chrome/74.0.3729.112 Safari/537.36
   os:
@@ -4345,8 +4345,8 @@
     platform: ""
   client:
     type: browser
-    name: Chrome Webview
-    version: "53.0.2749.0"
+    name: Yandex Browser
+    version: "7.45"
     engine: Blink
     engine_version: ""
   device:
@@ -4354,7 +4354,7 @@
     brand: Arian Space
     model: "100"
   os_family: Android
-  browser_family: Chrome
+  browser_family: Unknown
 - 
   user_agent: Mozilla/5.0 (compatible; MSIE 10.0; Windows NT 6.2; WOW64; Trident/6.0; Touch; MAARJS)
   os:
