Adds detection for HasCodingOS

--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -193,6 +193,11 @@
 ##########
 # Linux
 ##########
+# HasCodingOS (https://forum.hascoding.com/HasCodingOS)
+- regex: 'HasCodingOs (\d+[\.\d]+)'
+  name: 'HasCodingOS'
+  version: '$1'
+
 - regex: '(Ordissimo|webissimo3)'
   name: 'Ordissimo'
   version: ''
