Adds detection for Lumin OS

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1756,3 +1756,10 @@
     short_name: IOS
     version: "8.2"
     platform: ""
+-
+  user_agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/77.0.3865.90 Safari/537.36 Helio/0.98.0
+  os:
+    name: Lumin OS
+    short_name: LOS
+    version: 0.98.0
+    platform: x64
