--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -193,6 +193,12 @@
 ##########
 # Linux
 ##########
+
+# Lumin OS (https://developer.magicleap.com/en-us/learn/guides/lumin-os-release-notes-summary)
+- regex: 'Helio/(\d+[\.\d]+)'
+  name: 'Lumin OS'
+  version: '$1'
+
 - regex: '(Ordissimo|webissimo3)'
   name: 'Ordissimo'
   version: ''
