--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,6 +5,16 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+# Smooz (https://smoozapp.com/)
+- regex: 'Chrome.+Smooz/(\d+[\.\d]+)'
+  name: 'Smooz'
+  version: '$1'
+  engine:
+    default: 'Blink'
+- regex: 'Smooz/(\d+[\.\d]+)'
+  name: 'Smooz'
+  version: '$1'
+
 # Cornowser (https://github.com/xdevs23/Cornowser)
 - regex: 'Cornowser/(\d+[\.\d]+)'
   name: 'Cornowser'
