Adds detection for Deledao browser

--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -3055,3 +3055,19 @@
     version: 1.0.4.7
     engine: Blink
     engine_version: ""
+-
+  user_agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/80.0.3987.153 DeledaoPersonal/80.0.3987.153 Safari/537.36
+  client:
+    type: browser
+    name: Deledao
+    version: 80.0.3987.153
+    engine: Blink
+    engine_version: ""
+-
+  user_agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_2) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/73.0.3683.80 DeledaoFamily/73.0.3683.80 Safari/537.36
+  client:
+    type: browser
+    name: Deledao
+    version: 73.0.3683.80
+    engine: Blink
+    engine_version: ""
