--- a/Tests/fixtures/tablet-1.yml
+++ b/Tests/fixtures/tablet-1.yml
@@ -9293,3 +9293,21 @@
     model: iPad Air 4
   os_family: iOS
   browser_family: Unknown
+- 
+  user_agent: Mozilla/5.0 (Linux; U; Cosmote_My_mini_Tab 4.0.4; Cosmote_My_mini_Tab Build/IMM76D) AppleWebKit/534.30 (KHTML, like Gecko) Version/4.0 Safari/534.30
+  os:
+    name: Android
+    version: 4.0.4
+    platform: ""
+  client:
+    type: browser
+    name: Safari
+    version: "4.0"
+    engine: WebKit
+    engine_version: "534.30"
+  device:
+    type: tablet
+    brand: Cosmote
+    model: My Mini Tab
+  os_family: Android
+  browser_family: Safari
