Adds detection for GridOS

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1756,3 +1756,10 @@
     short_name: IOS
     version: "8.2"
     platform: ""
+-
+  user_agent: Mozilla/5.0 (Linux; U; Grid OS 1.0; en-us) AppleWebKit/533.1 (KHTML, like Gecko) Version/5.0 Safari/533.1
+  os:
+    name: GridOS
+    short_name: GRI
+    version: "1.0"
+    platform: ""
