--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -6,6 +6,13 @@
 ###############
 
 ##########
+# GridOS (https://web.archive.org/web/20111123141630/http://fusiongarage.com/grid-os/about)
+##########
+- regex: 'Grid OS (\d+[\.\d]+)'
+  name: 'GridOS'
+  version: '$1'
+
+##########
 # Caixa Mágica (https://caixamagica.pt/)
 ##########
 - regex: 'CaixaMagica'
