Move BriskBard regex at the top before Chrome

--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -173,7 +173,7 @@
     type: browser
     name: BriskBard
     version: "1.0"
-    engine: ""
+    engine: Blink
     engine_version: ""
 - 
   user_agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_11_2) AppleWebKit/537.36 (KHTML, like Gecko) brave/0.7.9 Chrome/47.0.2526.73 Electron/0.36.2 Safari/537.36
@@ -3069,5 +3069,13 @@
     type: browser
     name: Smooz
     version: 1.47.0
+    engine: Blink
+    engine_version: ""
+-
+  user_agent: Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.88 Safari/537.36 BriskBard/1.8.4
+  client:
+    type: browser
+    name: BriskBard
+    version: 1.8.4
     engine: Blink
     engine_version: ""
