--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,6 +5,13 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+# BriskBard (https://www.briskbard.com/)
+- regex: 'BriskBard(?:/(\d+[\.\d]+))?'
+  name: 'BriskBard'
+  version: '$1'
+  engine:
+    default: 'Blink'
+
 # Smooz (https://smoozapp.com/)
 - regex: 'Chrome.+Smooz/(\d+[\.\d]+)'
   name: 'Smooz'
@@ -1922,11 +1929,6 @@
 - regex: 'BlackBerry|PlayBook|BB10'
   name: 'BlackBerry Browser'
   version: ''
-
-#BriskBard
-- regex: 'BriskBard(?:/(\d+[\.\d]+))?'
-  name: 'BriskBard'
-  version: '$1'
 
 #Android Browser
 - regex: 'Android'
