--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -6,11 +6,14 @@
 ###############
 
 # BriskBard (https://www.briskbard.com/)
-- regex: 'BriskBard(?:/(\d+[\.\d]+))?'
+- regex: Chrome.+BriskBard/(\d+[\.\d]+)
   name: 'BriskBard'
   version: '$1'
   engine:
     default: 'Blink'
+- regex: 'BriskBard(?:/(\d+[\.\d]+))?'
+  name: 'BriskBard'
+  version: '$1'
 
 # GinxDroid Browser (https://play.google.com/store/apps/details?id=ginxdroid.gdm)
 - regex: 'GinxDroidBrowser/(\d+[\.\d]+)'
