--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -10,6 +10,7 @@
   name: 'Maelstrom'
   version: '$1'
   engine:
+    default: 'Blink'
 
 # BriskBard (https://www.briskbard.com/)
 - regex: Chrome.+BriskBard/(\d+[\.\d]+)
