Improves detection for Jio Browser

--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -509,7 +509,7 @@
   version: '$1'
 
 # Jio Browser (https://play.google.com/store/apps/details?id=com.jio.web)
-- regex: 'JioBrowser(?:/(\d+[\.\d]+))?'
+- regex: 'Jio(?:Browser|Pages)(?:/(\d+[\.\d]+))?'
   name: 'Jio Browser'
   version: '$1'
   engine:
