--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -3135,3 +3135,11 @@
     version: 1.8.4
     engine: Blink
     engine_version: ""
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; AC2001) AppleWebKit/537.36 (KHTML, like Gecko) JioPages/2.0 Chrome/83.0.4103.96 Mobile Safari/537.36
+  client:
+    type: browser
+    name: Jio Browser
+    version: "2.0"
+    engine: Blink
+    engine_version: ""
