Adds detection for Craving Explorer browser

--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -3135,3 +3135,11 @@
     version: 1.8.4
     engine: Blink
     engine_version: ""
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0; ) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/83.0.4103.116 Safari/537.36 CravingExplorer/2.2.17
+  client:
+    type: browser
+    name: Craving Explorer
+    version: 2.2.17
+    engine: Blink
+    engine_version: ""
