--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,6 +5,13 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+# JavaFX (https://docs.oracle.com/javase/8/javafx/embedded-browser-tutorial/overview.htm)
+- regex: 'JavaFX/(\d+[\.\d]+)'
+  name: 'JavaFX'
+  version: '$1'
+  engine:
+    default: 'WebKit'
+
 # BriskBard (https://www.briskbard.com/)
 - regex: Chrome.+BriskBard/(\d+[\.\d]+)
   name: 'BriskBard'
