Adds detection for Byffox browser

--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -3135,3 +3135,11 @@
     version: 1.8.4
     engine: Blink
     engine_version: ""
+-
+  user_agent: Mozilla/5.0 (Windows NT 5.1; rv:15.0) Gecko/20100101 Firefox/15.0 Byffox/15.0
+  client:
+    type: browser
+    name: Byffox
+    version: "15.0"
+    engine: Gecko
+    engine_version: "15.0"
