--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,8 +5,15 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+# Byffox (https://byffox.sourceforge.io/index.php)
+- regex: 'Byffox/(\d+[\.\d]+)'
+  name: 'Byffox'
+  version: '$1'
+  engine:
+    default: 'Gecko'
+
 # BriskBard (https://www.briskbard.com/)
-- regex: Chrome.+BriskBard/(\d+[\.\d]+)
+- regex: 'Chrome.+BriskBard/(\d+[\.\d]+)'
   name: 'BriskBard'
   version: '$1'
   engine:
