--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -3135,3 +3135,11 @@
     version: 1.8.4
     engine: Blink
     engine_version: ""
+-
+  user_agent: Mozilla/5.0 (Windows NT 6.1) AppleWebKit/537.36 (KHTML like Gecko) coccocbrowser/47.0 Chrome/41.0.2272.119coccoc Safari/537.36
+  client:
+    type: browser
+    name: Coc Coc
+    version: "47.0"
+    engine: Blink
+    engine_version: ""
