--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,6 +5,13 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+# PolyBrowser (https://github.com/PolySuite/PolyBrowser)
+- regex: 'PolyBrowser/(\d+[\.\d]+)'
+  name: 'PolyBrowser'
+  version: '$1'
+  engine:
+    default: 'Gecko'
+
 # BriskBard (https://www.briskbard.com/)
 - regex: Chrome.+BriskBard/(\d+[\.\d]+)
   name: 'BriskBard'
