Adds detection for DVKBuntu operating system

--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -193,6 +193,11 @@
 ##########
 # Linux
 ##########
+# DVKBuntu (https://www.dvkbuntu.org/)
+- regex: 'dvkbuntu'
+  name: 'DVKBuntu'
+  version: ''
+
 - regex: '(Ordissimo|webissimo3)'
   name: 'Ordissimo'
   version: ''
