--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1763,3 +1763,10 @@
     short_name: DEE
     version: "15.11"
     platform: x64
+-
+  user_agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) dvkbuntu-easy-menu/1.0.0 Chrome/83.0.4103.64 Electron/9.0.0 Safari/537.36
+  os:
+    name: DVKBuntu
+    short_name: DVK
+    version: ""
+    platform: x64
