--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -3143,3 +3143,11 @@
     version: "47.0"
     engine: Blink
     engine_version: ""
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) flast/83.0.0 Chrome/83.0.4103.122 Safari/537.36
+  client:
+    type: browser
+    name: Flast
+    version: 83.0.0
+    engine: Blink
+    engine_version: ""
