--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12597,10 +12597,10 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-T365(?:F0|[MY])?(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Tab Active 8.0"'
-    - regex: '(?:SAMSUNG-)?SM-T360(?:[);/ ]|$)'
+    - regex: '(?:SAMSUNG-)?SM-(?:T360|T390)(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Tab Active 8.0" WiFi'
-    - regex: '(?:SAMSUNG-)?SM-(?:T390|T395[CN]?|T397U)(?:[);/ ]|$)'
+    - regex: '(?:SAMSUNG-)?SM-(?:T395[CN]?|T397U)(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Tab Active 2 8.0"'
     - regex: '(?:SAMSUNG-)?SM-(?:T575N?|T577U?)(?:[);/ ]|$)'
