--- a/Tests/fixtures/tablet-1.yml
+++ b/Tests/fixtures/tablet-1.yml
@@ -9380,7 +9380,7 @@
   device:
     type: tablet
     brand: Samsung
-    model: Galaxy Tab Active 2 8.0"
+    model: Galaxy Tab Active 2 8.0" WiFi
   os_family: Android
   browser_family: Chrome
 - 
