Adds detection for Samsung Galaxy Tab Active 2 8.0" WiFi

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12597,12 +12597,15 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-T365(?:F0|[MY])?(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Tab Active 8.0"'
-    - regex: '(?:SAMSUNG-)?SM-(?:T360|T390)(?:[);/ ]|$)'
+    - regex: '(?:SAMSUNG-)?SM-T360(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Tab Active 8.0" WiFi'
     - regex: '(?:SAMSUNG-)?SM-(?:T395[CN]?|T397U)(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Tab Active 2 8.0"'
+    - regex: '(?:SAMSUNG-)?SM-T390(?:[);/ ]|$)'
+      device: 'tablet'
+      model: 'Galaxy Tab Active 2 8.0" WiFi'
     - regex: '(?:SAMSUNG-)?SM-(?:T575N?|T577U?)(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Tab Active 3 8.0"'
