Improves detection for iOS

--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -541,7 +541,7 @@
   name: 'iOS'
   version: '3.1'
 
-- regex: 'iPhone/(\d+[\.\d]*)'
+- regex: 'iPhone/(\d+[\.\d]*) hw/'
   name: 'iOS'
   version: '$1'
 
