--- a/Tests/fixtures/smartphone-2.yml
+++ b/Tests/fixtures/smartphone-2.yml
@@ -11607,7 +11607,7 @@
   device:
     type: smartphone
     brand: Samsung
-    model: Galaxy S20
+    model: Galaxy S20 5G
   os_family: Android
   browser_family: Chrome
 - 
