--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12889,9 +12889,9 @@ Samsung:
       model: 'Galaxy S10+ Olympic Games Edition'
     - regex: '(?:SAMSUNG-)?SM-G970(?:U1|[08FUNWX])(?:[);/ ]|$)'
       model: 'Galaxy S10e'
-    - regex: '(?:SAMSUNG-)?SM-G980F|SC-51A'
+    - regex: '(?:SAMSUNG-)?SM-G980F'
       model: 'Galaxy S20'
-    - regex: '(?:SAMSUNG-)?SM-G981(?:U1|[0BNUVW])|SCG01'
+    - regex: '(?:SAMSUNG-)?SM-G981(?:U1|[0BNUVW])|SCG01|SC-51A'
       model: 'Galaxy S20 5G'
     - regex: '(?:SAMSUNG-)?SM-G780F'
       model: 'Galaxy S20 FE'
