Change from browser to app

--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -323,3 +323,8 @@
 - regex: 'KAKAOTALK (\d+\.(?:[\.\d]+))?'
   name: 'KakaoTalk'
   version: '$1'
+
+# Thunder (https://xl11.xunlei.com/)
+- regex: 'Thunder/(\d+[\.\d]+)'
+  name: 'Thunder'
+  version: '$1'
