Adds detection for Expanse bot

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -4057,3 +4057,12 @@
     producer:
       name: ""
       url: ""
+-
+  user_agent: 'Expanse indexes the network perimeters of our customers. If you have any questions or concerns, please reach out to: scaninfo@expanseinc.com'
+  bot:
+    name: Expanse
+    category: Security Checker
+    url: https://expanse.co/
+    producer:
+      name: Expanse Inc.
+      url: https://expanse.co/
