--- a/regexes/bots.yml
+++ b/regexes/bots.yml
@@ -2298,7 +2298,7 @@
     name: ''
     url: ''
 
-- regex: 'Expanse'
+- regex: 'scaninfo@expanseinc.com'
   name: 'Expanse'
   category: 'Security Checker'
   url: 'https://expanse.co/'
