feat(device) detect brand Asus model: ZenPad 8.0 (P024)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2358,7 +2358,7 @@ Asus:
     - regex: 'P01[VW]'
       model: 'ZenPad 7.0'
       device: 'tablet'
-    - regex: 'P024 Build|P00A'
+    - regex: '(?:P024|P00A)(?:[);/ ]|$)'
       model: 'ZenPad 8.0'
       device: 'tablet'
     - regex: 'P01MA(?: Build|\))|P01M(?: Build|\))'
