feat(device) detect new brand Simply model: NP602SI feat(device) detect brand Sharp model: Aquos Keitai 3 (NP806SH)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14253,7 +14253,7 @@ Spice:
 
 # Sharp (jp.sharp)
 Sharp:
-  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?(?:[);/ ]|$)|AQUOS|(?:SH-M0[14-9]|SH-M1[1-6](?:-y)?|S[357]-SH|SH-[MZ](10|01)|SH-[CL]02|SH-RM(?:1[125]|02)|[34]04SH|401SH|[45]02SH|306SH|[36]05SH|70[1246]SH|80[138]SH|90[1678]SH|50[3679]SH|SHL2[25]|SHV4[0-8]|SHV3[1-9](?:[-_]u)?|FS80(?:1[08]|32|28|0[29])|TG-L900S|NP601SH|403SH|603SH|SHF3[134]|SHV4[035][-_]u|SW001SH|SHG0[123]|X4-SH|A002SH|SH-A01|DM-01J|SH-D01|A001SH|606SH|FS801[56]|d-41A|NP805SH)(?:[);/ ]|$)'
+  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?(?:[);/ ]|$)|AQUOS|(?:SH-M0[14-9]|SH-M1[1-6](?:-y)?|S[357]-SH|SH-[MZ](10|01)|SH-[CL]02|SH-RM(?:1[125]|02)|[34]04SH|401SH|[45]02SH|306SH|[36]05SH|70[1246]SH|80[138]SH|90[1678]SH|50[3679]SH|SHL2[25]|SHV4[0-8]|SHV3[1-9](?:[-_]u)?|FS80(?:1[08]|32|28|0[29])|TG-L900S|NP601SH|403SH|603SH|SHF3[134]|SHV4[035][-_]u|SW001SH|SHG0[123]|X4-SH|A002SH|SH-A01|DM-01J|SH-D01|A001SH|606SH|FS801[56]|d-41A|NP80[56]SH)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -14391,7 +14391,7 @@ Sharp:
       model: 'Disney Mobile DM-01J'
     - regex: 'A001SH'
       model: 'Simple Sumaho 5'  # (Simple Smartphone 5)
-    - regex: 'NP805SH'
+    - regex: 'NP80[56]SH'
       model: 'Aquos Keitai 3'
 
     # explicit tablet models
@@ -14414,6 +14414,12 @@ Sharp:
       model: '$1'
     - regex: '(SH-?[0-9]+[a-z]?)(?:[);/ ]|$)'
       model: '$1'
+
+# Simply or SIMPLE Mobile (simplemobile.com)
+Simply:
+  regex: '(NP602SI)(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: '$1'
 
 # Softbank
 Softbank:
