feat(device) detect brand ZTE model: Blade A520 (BA520) feat(device) detect brand Kyocera model: Qua Phone QX (KYV42_u) feat(device) detect brand Pioneer model: XDP-300R feat(device) detect brand Fujitsu models: Arrows K-tai (F-05G), F-04F

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -5776,7 +5776,7 @@ FNB:
 
 # Fujitsu
 Fujitsu:
-  regex: '(?:F-01[FHJKL]|F-02[EFGHLK]|F-03[DEFGKHL]|F-04[EGHKJ]|F-05[DEFJ]|F-06[EF]|F-07[DE]|F-08D|F-09[DE]|F-10D|F-[45]1A|F-[45]2A|F-11D|F-12C|M532|FARTM933KZ|901FJ|arrows(?:RX|M03|M0[45](?:-PREMIUM)?)|801FJ|FJL2[12])(?:[);/ ]|$)'
+  regex: '(?:F-01[FHJKL]|F-02[EFGHLK]|F-03[DEFGKHL]|F-04[EGFHKJ]|F-05[DEFJG]|F-06[EF]|F-07[DE]|F-08D|F-09[DE]|F-10D|F-[45]1A|F-[45]2A|F-11D|F-12C|M532|FARTM933KZ|901FJ|arrows(?:RX|M03|M0[45](?:-PREMIUM)?)|801FJ|FJL2[12])(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'F-51A(?:[);/ ]|$)'
@@ -5831,6 +5831,8 @@ Fujitsu:
       model: 'Arrows NX F-05F'
     - regex: 'F-05J(?:[);/ ]|$)'
       model: 'Arrows Be F-05J'
+    - regex: 'F-05G(?:[);/ ]|$)'
+      model: 'Arrows K-tai'
     - regex: 'F-04K(?:[);/ ]|$)'
       model: 'Arrows Be F-04K'
     - regex: 'F-02L(?:[);/ ]|$)'
@@ -5857,8 +5859,8 @@ Fujitsu:
       model: 'Arrows Me F-11D'
     - regex: 'F-12C(?:[);/ ]|$)'
       model: 'F-12C'
-    - regex: 'F-04J(?:[);/ ]|$)'
-      model: 'F-04J'
+    - regex: '(F-04[JF])(?:[);/ ]|$)'
+      model: '$1'
     - regex: 'arrowsM03(?:[);/ ]|$)'
       model: 'Arrows M03'
     - regex: 'arrowsRX(?:[);/ ]|$)'
@@ -8303,7 +8305,7 @@ Kyocera:
       model: 'Kantan Sumaho'
     - regex: 'KYV37(?:[);/ ]|$)'
       model: 'Qua Phone'
-    - regex: 'KYV42(?:[);/ ]|$)'
+    - regex: 'KYV42(?:_u)?(?:[);/ ]|$)'
       model: 'Qua Phone QX'
     - regex: 'KYV44(?:_u2?)?(?:[);/ ]|$)'
       model: 'Qua Phone QZ'
@@ -11980,7 +11982,7 @@ Primepad:
 
 # Pioneer
 Pioneer:
-  regex: 'Pioneer|.*; R1 Build|dvr700pi'
+  regex: 'Pioneer|.*; R1 Build|dvr700pi|XDP-300R'
   device: 'smartphone'
   models:
     - regex: '.*; R1 Build'
@@ -11993,6 +11995,9 @@ Pioneer:
     - regex: 'dvr700pi'
       model: 'DVR700PI 7.0"'
       device: 'tablet'
+    - regex: '(XDP-300R)'
+      device: 'portable media player'
+      model: '$1'
 
 # Pixus
 Pixus:
@@ -17156,6 +17161,8 @@ ZTE:
       model: 'Optus X Wave'
     - regex: 'Optus X Start(?:[);/ ]|$)'
       model: 'Optus X Start'
+    - regex: 'BA520(?:[);/ ]|$)'
+      model: 'Blade A520'
     - regex: 'Blade (A(0620|310|321|452|460|462|465|475|510|512|52[012]|530|531|602|612|910)|L[12]10|L130|V0730|V0800|V580|V1000)(?:[);/ ]|$)'
       model: 'Blade $1'
     - regex: 'Blade L2 Plus(?:[);/ ]|$)'
