--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -185,7 +185,7 @@
 - regex: 'BingWeb/([\d\.]+)?'
   name: 'BingWebApp'
   version: '$1'
-- regex: 'GSA/([\d\.]+)?'
+- regex: '(?:com.google.GoogleMobile|GSA)/([\d\.]+)?'
   name: 'Google Search App'
   version: '$1'
 - regex: 'Flipboard/([\d\.]+)?'
@@ -276,11 +276,6 @@
 - regex: 'DeviantArt/([\d\.]+)'
   name: 'DeviantArt'
   version: ''
-
-# Google (https://apps.apple.com/us/app/google/id284815942)
-- regex: 'com.google.GoogleMobile/([\d\.]+)'
-  name: 'Google'
-  version: '$1'
 
 # Discord (https://apps.apple.com/us/app/discord-talk-chat-hang-out/id985746746)
 - regex: 'Discord/([\d\.]+)'
