--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -285,7 +285,7 @@
   user_agent: com.google.GoogleMobile/23.1.0 iPhone/11.4.1 hw/iPhone6_2
   client:
     type: mobile app
-    name: Google
+    name: Google Search App
     version: 23.1.0
 -
   user_agent: Discord/966 CFNetwork/758.5.3 Darwin/15.6.0
