Change CGN from browser to app

--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -431,3 +431,8 @@
 - regex: 'Thunder/(\d+[\.\d]+)'
   name: 'Thunder'
   version: '$1'
+
+# CGN (https://www.cgn.it/)
+- regex: 'CGNBrowser/(\d+[\.\d]+)'
+  name: 'CGN'
+  version: '$1'
