--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -491,3 +491,9 @@
     type: mobile app
     name: Thunder
     version: 10.1.31.740
+-
+  user_agent: Mozilla/5.0 (Windows NT 6.3; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/73.0.3683.75 CGNBrowser/1.3.93.10 Safari/537.36
+  client:
+    type: mobile app
+    name: CGN
+    version: 1.3.93.10
